<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <POU Name="FB_CoreVibratoryBowl2" Id="{38cac3bb-8f58-4f28-bdcd-b1cc47d57b4f}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_CoreVibratoryBowl2
VAR_INPUT
    bEnable : BOOL;
    bReset : BOOL;
END_VAR

VAR_OUTPUT
	bFaulted: BOOL;
    iCoreCount : INT; (* Counts number of cores processed *)
END_VAR

VAR
    State : INT := 0;
    DelayTimer : TON;
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[CASE State OF
    0: (* Idle/Off *)
        IF GVL_IO.DI_24VDC_CB_OK AND GVL_IO.DI_ECS THEN
            State := 1;
        END_IF

    1: (* Wait for Product in Position *)
        DelayTimer(IN := TRUE, PT := T#50MS);
        IF DelayTimer.Q AND GVL_IO.DI_PE3 THEN
            State := 2;
        END_IF

    2: (* Energize Core Track Index Solenoid *)
        GVL_IO.DO_PCYL6_E := TRUE;
        DelayTimer(IN := TRUE, PT := T#250MS);
        IF DelayTimer.Q THEN
            GVL_IO.DO_PCYL6_E := FALSE;
            State := 3;
        END_IF

    3: (* Check High-Level Sensor *)
        DelayTimer(IN := TRUE, PT := T#500MS);
        IF DelayTimer.Q THEN
            IF GVL_IO.DI_PE6 THEN
                State := 3; (* Pause and wait *)
            ELSE
                iCoreCount := iCoreCount + 1;
                State := 2;
            END_IF
        END_IF
END_CASE

(* Reset logic *)
IF bReset THEN
    State := 0;
    iCoreCount := 0;
END_IF]]></ST>
    </Implementation>
    <LineIds Name="FB_CoreVibratoryBowl2">
      <LineId Id="111" Count="35" />
      <LineId Id="9" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>